--- a/SpringMVCDemo/web/WEB-INF/web.xml
+++ b/SpringMVCDemo/web/WEB-INF/web.xml
@@ -3,6 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
 http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+
+    <!-- default mapping, allow read .png file -->
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.png</url-pattern>
+    </servlet-mapping>
+
     <!-- SpringMVC core dispatcher -->
     <servlet>
         <servlet-name>springmvc</servlet-name>
