--- a/MyBatisDemo/src/log4j.properties
+++ b/MyBatisDemo/src/log4j.properties
@@ -2,7 +2,8 @@
 log4j.rootLogger=ERROR,stdout
 # MyBatis logging configuration...
 log4j.logger.mapper=TRACE
-log4j.logger.dao=INFO
+log4j.logger.dao=TRACE
+log4j.logger.pojo=TRACE
 # Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
