Did updates in Shiro web module

--- a/ShiroWebAppDemo/src/main/webapp/WEB-INF/shiro.ini
+++ b/ShiroWebAppDemo/src/main/webapp/WEB-INF/shiro.ini
@@ -21,6 +21,35 @@
 [main]
 
 shiro.loginUrl = /login.jsp
+#authc.successUrl = /index.jsp
+
+#声明一个realm
+loginRealm= realm.AuthenticationRealm
+#指定securityManager的realms实现,通过$name来指定realm
+securityManager.realms=$loginRealm
+
+#dateSource
+#↓ 使用 JdbcRealm 作为当前验证的Realm
+#jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
+#↓ 使用druid数据源
+#dataSource=com.alibaba.druid.pool.DruidDataSource
+#↓ MySQL驱动
+#dataSource.driverClassName=com.mysql.jdbc.Driver
+#↓ MySQL相关参数配置
+#dataSource.url=jdbc:mysql://localhost:3306/demo
+#dataSource.username=chuliu
+#dataSource.password=chuliu
+#↓ 引入相关数据配置
+#jdbcRealm.dataSource=$dataSource
+#↓这里是默认的sql查询语句，可以自己设定，但参数不能修改，只有一个，且相对应。
+#jdbcRealm.authenticationQuery = select password from users where username = ?
+#jdbcRealm.userRolesQuery = select role_name from user_roles where username = ?
+#jdbcRealm.permissionsQuery = select permission from roles_permissions where role_name = ?
+#↓是否
+#jdbcRealm.permissionsLookupEnabled = false
+#saltStyle =NO_SALT ,  CRYPT,  COLUMN,  EXTERNAL;
+#jdbcRealm.saltStyle = COLUMN
+#securityManager.realms=$jdbcRealm
 
 # Let's use some in-memory caching to reduce the number of runtime lookups against Stormpath.  A real
 # application might want to use a more robust caching solution (e.g. ehcache or a distributed cache).  When using such
@@ -29,28 +58,22 @@ shiro.loginUrl = /login.jsp
 cacheManager = org.apache.shiro.cache.MemoryConstrainedCacheManager
 securityManager.cacheManager = $cacheManager
 
-# Configure a Realm to connect to a user datastore.  In this simple tutorial, we'll just point to Stormpath since it
-# takes 5 minutes to set up:
-stormpathClient = com.stormpath.shiro.client.ClientFactory
-stormpathClient.cacheManager = $cacheManager
-
-# (Optional) If you put your apiKey.properties in the non-default location, you set the location here
-#stormpathClient.apiKeyFileLocation = $HOME/.stormpath/apiKey.properties
-
-stormpathRealm = com.stormpath.shiro.realm.ApplicationRealm
-stormpathRealm.client = $stormpathClient
-
-# Find this URL in your Stormpath console for an application you create:
-# Applications -> (choose application name) --> Details --> REST URL
-# (Optional) If you only have one Application
-#stormpathRealm.applicationRestUrl = https://api.stormpath.com/v1/applications/$STORMPATH_APPLICATION_ID
-
-stormpathRealm.groupRoleResolver.modeNames = name
-securityManager.realm = $stormpathRealm
 
 [urls]
-/login.jsp = authc
-/logout = logout
-/account/** = authc
+/login.jsp = anon
+/login_result.jsp = anon
+#/index.jsp = anon
+
+#authc: 该页面("index.jsp")需要通过验证，即通过了Real的认证，才能访问；当处于未登录状态时，访问该页面，会自动跳转到shiro.loginUrl(即login.jsp)
+#/index.jsp = authc
+
+#authcBasic: 该页面需要通过HTTP Basic验证，才能访问。(会浏览器会有验证弹窗)。弹窗会一直存在，除非验证通过。
+#需要注意(与shiro无关)，HTTP Baisc验证是基于浏览器的，即完成一次验证之后，在浏览器关闭之前，输入的认证信息会被浏览器记住，
+#当再次访问该页面时，Shiro会用记住的认证信息自动执行一次login。(调用对用realm的doGetAuthenticationInfo()方法)
+/index.jsp = authcBasic
+
+#/login.jsp = anon
+#/logout = logout
+#/account/** = authc
 
 
