--- a/ShiroDemo/pom.xml
+++ b/ShiroDemo/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.apache.shiro.tutorials</groupId>
-    <artifactId>shiro-tutorial</artifactId>
+    <groupId>com.chuliu.shiro</groupId>
+    <artifactId>ShiroDemo</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>First Apache Shiro Application</name>
     <packaging>jar</packaging>
@@ -19,10 +19,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
+                <version>3.1</version>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
