--- a/ShiroWebAppDemo/pom.xml
+++ b/ShiroWebAppDemo/pom.xml
@@ -12,7 +12,7 @@
         <shiro.version>1.3.2</shiro.version>
     </properties>
 
-    <build>
+    <!--<build>
         <plugins>
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
@@ -25,7 +25,7 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 
     <dependencies>
 
