--- a/ShiroWebAppDemo/src/main/webapp/WEB-INF/web.xml
+++ b/ShiroWebAppDemo/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,30 @@
         <listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
     </listener>
 
+    <!-- Login servlet begin-->
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>action.LoginServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login.do</url-pattern>
+    </servlet-mapping>
+    <!-- Login servlet end-->
+
+    <!-- Logout servlet begin-->
+    <servlet>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>action.LogoutServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/logout.do</url-pattern>
+    </servlet-mapping>
+    <!-- Logout servlet begin-->
+
     <filter>
         <filter-name>ShiroFilter</filter-name>
         <filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class>
