Add more content in SpringDemo module

--- a/ShiroWebAppDemo/src/main/webapp/WEB-INF/shiro.ini
+++ b/ShiroWebAppDemo/src/main/webapp/WEB-INF/shiro.ini
@@ -65,12 +65,12 @@ securityManager.cacheManager = $cacheManager
 #/index.jsp = anon
 
 #authc: 该页面("index.jsp")需要通过验证，即通过了Real的认证，才能访问；当处于未登录状态时，访问该页面，会自动跳转到shiro.loginUrl(即login.jsp)
-#/index.jsp = authc
+/index.jsp = authc
 
 #authcBasic: 该页面需要通过HTTP Basic验证，才能访问。(会浏览器会有验证弹窗)。弹窗会一直存在，除非验证通过。
 #需要注意(与shiro无关)，HTTP Baisc验证是基于浏览器的，即完成一次验证之后，在浏览器关闭之前，输入的认证信息会被浏览器记住，
 #当再次访问该页面时，Shiro会用记住的认证信息自动执行一次login。(调用对用realm的doGetAuthenticationInfo()方法)
-/index.jsp = authcBasic
+#/index.jsp = authcBasic
 
 #/login.jsp = anon
 #/logout = logout
