--- a/SpringMVCDemo/web/WEB-INF/web.xml
+++ b/SpringMVCDemo/web/WEB-INF/web.xml
@@ -37,4 +37,15 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <!-- Load Spring context configuration -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/springmvc-servlet.xml</param-value>
+    </context-param>
+    <listener>
+        <listener-class>
+            org.springframework.web.context.ContextLoaderListener
+        </listener-class>
+    </listener>
+
 </web-app>
